# YOLOv8-train-kit

./: .gitignore  AUTHORS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.example.yaml
scripts/: evaluate.py  predict.py  prepare_dataset.py  train.py
yodet/: __init__.py  config.py  predict.py  train.py
yolokit/: __init__.py  predict.py  split.py  train.py
