[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo_detection_trainer"
version = "0.1.0"
license = { text = "AGPL-3.0" }
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
